# EV-CVAE

./: .gitignore  EV_CVAE_Final.ipynb  EV_charging_transactions_Preprocessing_Final.ipynb  README.md  pyproject.toml
notebooks/: EV_CVAE_Final.ipynb  EV_charging_transactions_Preprocessing_Final.ipynb  pub_pdf.mplstyle  publication.mplstyle
