[project]
name = "ev-cvae"
version = "0.1.0"
description = "Generative model for Electric Vehicle Charging Sessions"
authors = [
    {name = "Emilio J. Palacios-Garcia",email = "epalacios-garcia@ucc.ie"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "polars (>=1.39.3,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.10,<0.16.0)",
    "mypy (>=1.20.1,<2.0.0)"
]
opt = [
    "jupyterlab (>=4.5.6,<5.0.0)",
    "ipympl (>=0.10.0,<0.11.0)",
    "pytorch-graph (>=0.2.5,<0.3.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]
